[gd_scene load_steps=6 format=2]

[ext_resource path="res://material_maker/widgets/node_editor/input.gd" type="Script" id=1]
[ext_resource path="res://material_maker/icons/icons.svg" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 18, 48, 12, 16 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 34, 48, 12, 16 )

[node name="Parameter" type="HBoxContainer"]
margin_right = 201.0
margin_bottom = 24.0
script = ExtResource( 1 )

[node name="Delete" type="Button" parent="."]
margin_right = 28.0
margin_bottom = 24.0
icon = SubResource( 1 )
flat = true

[node name="Up" type="Button" parent="."]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 24.0
icon = SubResource( 2 )
flat = true

[node name="Down" type="Button" parent="."]
margin_left = 60.0
margin_right = 84.0
margin_bottom = 24.0
icon = SubResource( 3 )
flat = true

[node name="Name" type="LineEdit" parent="."]
margin_left = 88.0
margin_right = 158.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
hint_tooltip = "Input name"
text = "name"

[node name="Label" type="LineEdit" parent="."]
margin_left = 162.0
margin_right = 232.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
hint_tooltip = "Input Label"
text = "Label"

[node name="Type" type="OptionButton" parent="."]
margin_left = 236.0
margin_right = 338.0
margin_bottom = 24.0
rect_min_size = Vector2( 102, 0 )
hint_tooltip = "Input flag"
text = "Greyscale"
items = [ "Greyscale", null, false, 0, null, "Color", null, false, 1, null, "RGBA", null, false, 2, null, "SDF2D", null, false, 3, null, "SDF3D", null, false, 4, null, "SDF3D-C", null, false, 5, null ]
selected = 0

[node name="Default" type="LineEdit" parent="."]
margin_left = 342.0
margin_right = 412.0
margin_bottom = 24.0
rect_min_size = Vector2( 70, 0 )
hint_tooltip = "Default value"
size_flags_horizontal = 3
text = "0.0"

[node name="Function" type="CheckBox" parent="."]
margin_left = 416.0
margin_right = 499.0
margin_bottom = 24.0
text = "Function"
[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_Up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
